@@ -83,6 +83,13 @@ will both make for easier administration and better performance.</p>
 
 <h2>Timers</h2>
 
+<p>If a high throughput of jobs is anticipated (i.e. large numbers of jobs
+with brief execution times) then configure <i>MinJobAge</i> to the smallest
+interval practical for your environment. <i>MinJobAge</i> specifies the
+minimum number of seconds that a terminated job will be retained by SLURM's
+control daemon before purging. After this time, information about terminated
+jobs will only be available through accounting records.</p>
+
 <p>The configuration parameter <i>SlurmdTimeout</i> determines the interval
 at which <i>slurmctld</i> routinely communicates with <i>slurmd</i>.
 Communications occur at half the <i>SlurmdTimeout</i> value.
@@ -133,6 +140,6 @@ the hard limit in order to process all of the standard input and output
 connections to the launched tasks. It is recommended that you set the
 open file hard limit to 8192 across the cluster.</p>
 
-<p style="text-align:center;">Last modified 11 March 2008</p>
+<p style="text-align:center;">Last modified 13 May 2010</p>
 
 <!--#include virtual="footer.txt"-->
